--- a/src/components/layout/Header.module.css
+++ b/src/components/layout/Header.module.css
@@ -1,35 +1,42 @@
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 header {
-    color: #fff;
-    width: 100%;
-    height: 10vh;
-    padding: 0 10%;
-    background-color: rgb(81, 130, 99);
-    display: flex;
-    place-items: center;
-    justify-content: space-between;
+  color: #fff;
+  width: 100%;
+  height: 10vh;
+  padding: 0 10%;
+  background-color: rgb(81, 130, 99);
+  display: flex;
+  place-items: center;
+  justify-content: space-between;
 }
 
 nav ul {
-    display: flex;
-    place-items: center;
-    justify-content: space-between;
-    list-style: none;
+  display: flex;
+  place-items: center;
+  justify-content: space-between;
+  list-style: none;
 }
 
 nav ul li {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 
 nav button {
-    border-style: none;
-    background-color: rgb(232, 158, 67);
-    color: #fff;
-    padding: .5rem;
-    border-radius: 5px;
-    cursor: pointer;
+  border-style: none;
+  background-color: rgb(232, 158, 67);
+  color: #fff;
+  padding: 0.5rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.userAvatar {
+  border-radius: 50%;
+  background: white;
+  object-fit: cover;
+  object-position: top;
 }
